event 백엔드 추가(list페이지 컨트롤러, 엔티티, 서비스)

--- a/WebContent/admin/promotion/event/list.html
+++ b/WebContent/admin/promotion/event/list.html
@@ -55,7 +55,8 @@
                                 <thead>
                                     <tr>
                                         <td class="col-s">No.</td>
-                                        <td class="col-m">진행상태</td>
+                                        <td class="col-s">진행상태</td>
+                                        <td class="col-m">종료일</td>
                                         <td>제목</td>
                                         <td class="col-m">작성자</td>
                                         <td class="col-m">작성일</td>
@@ -67,41 +68,45 @@
                                     <tr>
                                         <td>1</td>
                                         <td class="event-ing">진행중</td>
+                                        <td>2020-11-13</td>
                                         <td class="text-left"><a href="">첫 예약시 모든 숙소 20% 할인쿠폰 증정!</a></td>
                                         <td>관리자</td>
                                         <td>2020-11-01</td>
-                                        <td class="col-s"><input type="checkbox"></td>
-                                        <td class="col-s"><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
                                     </tr>
                                     <tr>
                                         <td>2</td>
                                         <td class="event-end">종료</td>
+                                        <td>2021-01-15</td>
                                         <td class="text-left"><a href="">코로나 극복이벤트! 여행가서 코로나19에 걸려보아요!</a></td>
                                         <td>관리자</td>
                                         <td>2020-11-05</td>
-                                        <td class="col-s"><input type="checkbox"></td>
-                                        <td class="col-s"><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
                                         <td class="event-end">종료</td>
+                                        <td>2020-11-13</td>
                                         <td class="text-left"><a href="">강남 전지역 숙박업소 30% 할인쿠폰 증정!</a></td>
                                         <td>관리자</td>
                                         <td>2020-11-14</td>
-                                        <td class="col-s"><input type="checkbox"></td>
-                                        <td class="col-s"><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
                                     </tr>
                                     <tr>
                                         <td>4</td>
                                         <td class="event-ing">진행중</td>
+                                        <td>2020-11-13</td>
                                         <td class="text-left"><a href="">하ㅏㅏㅏㅏㅏㅏㅏㅏ 제목 뭐로하지???ㄹㅇㅇㅇㅇㅇ</a></td>
                                         <td>관리자</td>
                                         <td>2020-11-23</td>
-                                        <td class="col-s"><input type="checkbox"></td>
-                                        <td class="col-s"><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
+                                        <td><input type="checkbox"></td>
                                     </tr>
                                     <tr class="btn-delete">
-                                        <td colspan="7">
+                                        <td colspan="8">
                                             <input type="submit" value="글쓰기">
                                             <input type="submit" value="일괄공개">
                                             <input type="submit" value="전체삭제">
