admin/promotion/event jsp 모든 jsp 페이지 구현 및 pager 추가

--- a/WebContent/admin/promotion/event/list.html
+++ b/WebContent/admin/promotion/event/list.html
@@ -116,6 +116,26 @@
                                 </tbody>
                             </table>
                         </form>
+                        <div class="pager-container">
+                            <div class="btn btn-prev">
+                                <span><a href="">이전</a></span>
+                            </div>
+                            <ul class="pager-list">
+                                <li><a href="">1</a></li>
+                                <li><a href="">2</a></li>
+                                <li><a href="">3</a></li>
+                                <li><a href="">4</a></li>
+                                <li><a href="">5</a></li>
+                                <li><a href="">6</a></li>
+                                <li><a href="">7</a></li>
+                                <li><a href="">8</a></li>
+                                <li><a href="">9</a></li>
+                                <li><a href="">10</a></li>
+                            </ul>
+                            <div class="btn btn-next">
+                                <span><a href="">다음</a></span>
+                            </div>
+                        </div>
                     </section>
                 </div>
             </main>
