--- a/WebContent/admin/customerService/QnA/list.html
+++ b/WebContent/admin/customerService/QnA/list.html
@@ -55,7 +55,7 @@
                         <ul class="breadcrumb-list">
                             <li><i class="fas fa-home"></i>HOME ▶ </li>
                             <li>고객센터 ▶ </li>
-                            <li>공지사항 리스트</li>
+                            <li>문의사항 리스트</li>
                         </ul>
                     </div>
                     <section class="list-board">
@@ -77,7 +77,6 @@
                                 <tr>
                                     <td class="col-s">번호</td> 
                                     <td class="col-sm">회원명</td>
-                                    <td class="col-sm">닉네임</td>
                                     <td class="col-ml">문의제목</td>
                                     <td class="col-m">연락처</td>
                                     <td class="col-sm">문의날짜</td>
@@ -89,23 +88,10 @@
                                 <tr>
                                     <td>1</td>
                                     <td>김춘삼</td>
-                                    <td>user001</td>
-                                    <td>로그인이 안데요</td>
+                                    <td style="text-overflow:ellipsis; overflow:hidden; white-space:nowrap;">로그인이 안데요55555555555555555555555</td>
                                     <td>010-1234-5678</td>
                                     <td>2020/11/01</td>
-                                    <td>아니오</td>
-                                    <td>
-                                        <input type="checkbox" name="" id="">
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>김춘사</td>
-                                    <td>bombomsa</td>
-                                    <td>환불하고 싶어요</td>
-                                    <td>010-5678-7788</td>
-                                    <td>2020/11/03</td>
-                                    <td>아니오</td>
+                                    <td>답변함</td>
                                     <td>
                                         <input type="checkbox" name="" id="">
                                     </td>
@@ -113,7 +99,7 @@
                                 <tr class="btn-delete">
                                     <td colspan="8">
                                         <form action="">
-                                            <input type="submit" value="생성">
+                                            <input type="submit" value="답변">
                                             <input type="submit" value="삭제">
                                         </form>
                                     </td>
