--- a/WebContent/admin/customerService/notice/reg.html
+++ b/WebContent/admin/customerService/notice/reg.html
@@ -56,11 +56,12 @@
                             <li><i class="fas fa-home"></i>HOME ▶ </li>
                             <li>고객센터 ▶ </li>
                             <li>공지사항 리스트 ▶</li>
+                            <li>공지사항 디테일 ▶</li>
                             <li>공지사항 등록</li>
                         </ul> 
                     </div>
                     <section class="form-sec">
-                        <h1>공지사항 수정</h1>
+                        <h1>공지사항 등록</h1>
                         <form action="" class="reg-form">
                             <table class="table">
                                 <tr>
