--- a/WebContent/admin/promotion/event/edit.html
+++ b/WebContent/admin/promotion/event/edit.html
@@ -3,10 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이벤트 수정</title>
+    <link rel="stylesheet" href="../../../css/reset.css">
+    <link rel="stylesheet" href="../../../css/admin/layout.css">
+    <link rel="stylesheet" href="../../../css/admin/promotion/event/edit.css">
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <title>이벤트 등록</title>
 </head>
 <body>
+    <header class="sec-header">
+        <div id="header" class="header">
+            <div class="header-h1">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+            </div>
+            <div>
+                <ul class="main-menu">
+                    <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li><a href="">공지사항</a></li>
+                    <li><a href="">이벤트</a></li>
+                    <li><a href="">더보기</a></li>
+                    <li class="mypage"><a href="">로그인</a>
+                        <div class="mega-menu">
+                            <ul>
+                                <li><a href="">submenu</a></li>
+                                <li><a href="">submenu</a></li>
+                                <li><a href="">submenu</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
+    <main>
+        <section class="body">
+            <aside id="aside" class="aside">
+                <h1>프로모션 관리</h1>
+                    <ul>
+                        <li><a href="">골든타임 관리</a></li>
+                        <li><a href="" class="active">이벤트 관리</a></li>
+                    </ul>
+            </aside>
+            <div class="container">
+                <nav id="nav" class="nav">
+                    <ul>
+                        <li><a href="/admin/accommodations/list.jsp"><i class="fas fa-hotel"></i><span>업체관리</span></li></a>
+                        <li><a href="/admin/userInfo/privateMemberList.jsp"><i class="fas fa-user-circle"></i><span> 회원관리</span></a></li>
+                        <li class="current-tab"><a href="list.jsp"><i class="far fa-calendar-alt"></i><span>프로모션관리</span></a></li>
+                        <li><a href="/admin/customerService/notice/list.jsp"><i class="fas fa-headphones"></i><span>고객센터</span></a></li>
+                    </ul>
+                </nav>
+                <main id="main" class="main">
+	                <div class="sub-container">
+	                    <div class="breadcrumb">
+	                        <ul class="breadcrumb-list">
+	                            <li><i class="fas fa-home"></i>HOME ▶ </li>
+	                            <li>프로모션관리 ▶ </li>
+	                            <li>이벤트 관리</li>
+	                        </ul>
+	                    </div>
+	                    <h1>이벤트 등록</h1>
+	                    <section class="form-sec">
+	                        <form action="" class="reg-form">
+	                            <table class="table">
+	                                <tr>
+	                                    <th class="col-m">제목</th>
+	                                    <td class="col-l text-left">
+	                                        <input type="text" class="input-title" autofocus required>
+	                                        <input type="checkbox" class="checkbox-open"><span>즉시 공개</span>
+	                                    </td>
+	                                </tr>
+	                                <tr>
+	                                    <th>첨부파일</th>
+	                                    <td class="text-left">
+	                                        <input type="file">
+	                                    </td>
+	                                </tr>
+	                                <tr>
+	                                    <th>내용</th>
+	                                    <td class="text-left">
+	                                        <textarea class="textarea" cols="75" rows="25"></textarea>
+	                                    </td>
+	                                </tr>
+	                            </table>
+	                            <div>
+	                                <input class="btn-submit" type="submit" value="등록" />
+	                                <button class="btn-cancel" onclick="location.href='list.jsp'">취소</button>
+	                            </div>
+	                        </form>
+	                    </section>
+	                </div>
+	            </main>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
