--- a/WebContent/admin/promotion/event/list.html
+++ b/WebContent/admin/promotion/event/list.html
@@ -4,143 +4,162 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../css/reset.css">
+    <link rel="stylesheet" href="../../../css/admin/layout.css">
     <link rel="stylesheet" href="../../../css/admin/promotion/event/list.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>이벤트 리스트</title>
 </head>
 <body>
-    <header id="header" class="header">
-        <h1><a href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        <nav>
-            <h1>메인메뉴</h1>
-            <ul>
-                <li><a href="">공지사항</a></li>
-                <li><a href="">이벤트</a></li>
-                <li><a href="">더보기</a></li>
-                <li><a href="">로그인</a></li>
-            </ul>
-        </nav>
+    <header class="sec-header">
+        <div id="header" class="header">
+            <div class="header-h1">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+            </div>
+            <div>
+                <ul class="main-menu">
+                    <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li><a href="">공지사항</a></li>
+                    <li><a href="">이벤트</a></li>
+                    <li><a href="">더보기</a></li>
+                    <li class="mypage"><a href="">로그인</a>
+                        <div class="mega-menu">
+                            <ul>
+                                <li><a href="">submenu</a></li>
+                                <li><a href="">submenu</a></li>
+                                <li><a href="">submenu</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
 
-    <section class="body">
-        <aside id="aside" class="aside">
-            <h1>프로모션 관리</h1>
-                <ul>
-                    <li><a href="">골든타임 관리</a></li>
-                    <li><a href="" class="active">이벤트 관리</a></li>
-                </ul>
-        </aside>
-        <div class="container">
-            <nav id="nav" class="nav">
-                <ul>
-                    <li><a href=""><i class="fas fa-hotel"></i><span>업체관리</span></li></a>
-                    <li><a href=""><i class="fas fa-user-circle"></i><span> 회원관리</span></a></li>
-                    <li class="current-tab"><a href=""><i class="far fa-calendar-alt"></i><span>프로모션관리</span></a></li>
-                    <li><a href=""><i class="fas fa-headphones"></i><span>고객센터</span></a></li>
-                </ul>
-            </nav>
-            <main id="main" class="main">
-                <div class="sub-container">
-                    <div class="breadcrumb">
-                        <ul class="breadcrumb-list">
-                            <li><i class="fas fa-home"></i>HOME ▶ </li>
-                            <li>프로모션관리 ▶ </li>
-                            <li>이벤트 관리</li>
-                        </ul>
-                    </div>
-                    <h1>이벤트 리스트</h1>
-                    <section>
-                        <form action="" class="list-board">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <td class="col-s">No.</td>
-                                        <td class="col-s">진행상태</td>
-                                        <td class="col-m">종료일</td>
-                                        <td>제목</td>
-                                        <td class="col-m">작성자</td>
-                                        <td class="col-m">작성일</td>
-                                        <td class="col-s">공개여부</td>
-                                        <td class="col-s">삭제</td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td class="event-ing">진행중</td>
-                                        <td>2020-11-13</td>
-                                        <td class="text-left"><a href="">첫 예약시 모든 숙소 20% 할인쿠폰 증정!</a></td>
-                                        <td>관리자</td>
-                                        <td>2020-11-01</td>
-                                        <td><input type="checkbox"></td>
-                                        <td><input type="checkbox"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td class="event-end">종료</td>
-                                        <td>2021-01-15</td>
-                                        <td class="text-left"><a href="">코로나 극복이벤트! 여행가서 코로나19에 걸려보아요!</a></td>
-                                        <td>관리자</td>
-                                        <td>2020-11-05</td>
-                                        <td><input type="checkbox"></td>
-                                        <td><input type="checkbox"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td class="event-end">종료</td>
-                                        <td>2020-11-13</td>
-                                        <td class="text-left"><a href="">강남 전지역 숙박업소 30% 할인쿠폰 증정!</a></td>
-                                        <td>관리자</td>
-                                        <td>2020-11-14</td>
-                                        <td><input type="checkbox"></td>
-                                        <td><input type="checkbox"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>4</td>
-                                        <td class="event-ing">진행중</td>
-                                        <td>2020-11-13</td>
-                                        <td class="text-left"><a href="">하ㅏㅏㅏㅏㅏㅏㅏㅏ 제목 뭐로하지???ㄹㅇㅇㅇㅇㅇ</a></td>
-                                        <td>관리자</td>
-                                        <td>2020-11-23</td>
-                                        <td><input type="checkbox"></td>
-                                        <td><input type="checkbox"></td>
-                                    </tr>
-                                    <tr class="btn-delete">
-                                        <td colspan="8">
-                                            <input type="submit" value="글쓰기">
-                                            <input type="submit" value="일괄공개">
-                                            <input type="submit" value="전체삭제">
-                                            <input type="submit" value="일괄삭제">
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </form>
-                        <div class="pager-container">
-                            <div class="btn btn-prev">
-                                <span><a href="">이전</a></span>
-                            </div>
-                            <ul class="pager-list">
-                                <li><a href="">1</a></li>
-                                <li><a href="">2</a></li>
-                                <li><a href="">3</a></li>
-                                <li><a href="">4</a></li>
-                                <li><a href="">5</a></li>
-                                <li><a href="">6</a></li>
-                                <li><a href="">7</a></li>
-                                <li><a href="">8</a></li>
-                                <li><a href="">9</a></li>
-                                <li><a href="">10</a></li>
+    <main>
+        <section class="body">
+            <aside id="aside" class="aside">
+                <h1>프로모션 관리</h1>
+                    <ul>
+                        <li><a href="">골든타임 관리</a></li>
+                        <li><a href="" class="active">이벤트 관리</a></li>
+                    </ul>
+            </aside>
+            <div class="container">
+                <nav id="nav" class="nav">
+                    <ul>
+                        <li><a href="/admin/accommodations/list.jsp"><i class="fas fa-hotel"></i><span>업체관리</span></li></a>
+                        <li><a href="/admin/userInfo/privateMemberList.jsp"><i class="fas fa-user-circle"></i><span> 회원관리</span></a></li>
+                        <li class="current-tab"><a href="list.jsp"><i class="far fa-calendar-alt"></i><span>프로모션관리</span></a></li>
+                        <li><a href="/admin/customerService/notice/list.jsp"><i class="fas fa-headphones"></i><span>고객센터</span></a></li>
+                    </ul>
+                </nav>
+                <main id="main" class="main">
+                    <div class="sub-container">
+                        <div class="breadcrumb">
+                            <ul class="breadcrumb-list">
+                                <li><i class="fas fa-home"></i>HOME ▶ </li>
+                                <li>프로모션관리 ▶ </li>
+                                <li>이벤트 관리</li>
                             </ul>
-                            <div class="btn btn-next">
-                                <span><a href="">다음</a></span>
-                            </div>
                         </div>
-                    </section>
-                </div>
-            </main>
-        </div>
-    </section>
+                        <h1>이벤트 리스트</h1>
+                        <section>
+                            <form action="" class="list-board">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <td class="col-s">No.</td>
+                                            <td class="col-s">진행상태</td>
+                                            <td class="col-m">종료일</td>
+                                            <td>제목</td>
+                                            <td class="col-m">작성자</td>
+                                            <td class="col-m">작성일</td>
+                                            <td class="col-s">공개여부</td>
+                                            <td class="col-s">삭제</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td class="event-ing">진행중</td>
+                                            <td>2020-11-13</td>
+                                            <td class="text-left"><a href="">첫 예약시 모든 숙소 20% 할인쿠폰 증정!</a></td>
+                                            <td>관리자</td>
+                                            <td>2020-11-01</td>
+                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td class="event-end">종료</td>
+                                            <td>2021-01-15</td>
+                                            <td class="text-left"><a href="">코로나 극복이벤트! 여행가서 코로나19에 걸려보아요!</a></td>
+                                            <td>관리자</td>
+                                            <td>2020-11-05</td>
+                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td class="event-end">종료</td>
+                                            <td>2020-11-13</td>
+                                            <td class="text-left"><a href="">강남 전지역 숙박업소 30% 할인쿠폰 증정!</a></td>
+                                            <td>관리자</td>
+                                            <td>2020-11-14</td>
+                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td class="event-ing">진행중</td>
+                                            <td>2020-11-13</td>
+                                            <td class="text-left"><a href="">하ㅏㅏㅏㅏㅏㅏㅏㅏ 제목 뭐로하지???ㄹㅇㅇㅇㅇㅇ</a></td>
+                                            <td>관리자</td>
+                                            <td>2020-11-23</td>
+                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox"></td>
+                                        </tr>
+                                        <tr>
+                                            <td colspan="8" class="no-border btn-row">
+                                                <input type="submit" value="글쓰기">
+                                                <input type="submit" value="일괄공개">
+                                                <input type="submit" value="일괄삭제">
+                                            </td>
+                                        </tr>
+                                        <tr>
+	                                    	<td colspan="8" class="no-border">
+	                                    		<div class="pager-container">
+						                            <div class="btn btn-prev">
+						                                <span><a href="">이전</a></span>
+						                            </div>
+						                            <ul class="pager-list">
+						                                <li class="active-page"><a href="">1</a></li>
+						                                <li><a href="">2</a></li>
+						                                <li><a href="">3</a></li>
+						                                <li><a href="">4</a></li>
+						                                <li><a href="">5</a></li>
+						                                <li><a href="">6</a></li>
+						                                <li><a href="">7</a></li>
+						                                <li><a href="">8</a></li>
+						                                <li><a href="">9</a></li>
+						                                <li><a href="">10</a></li>
+						                            </ul>
+						                            <div class="btn btn-next">
+						                                <span><a href="">다음</a></span>
+						                            </div>
+						                       	</div>
+	                                    	</td>
+	                                    </tr>
+                                    </tbody>
+                                </table>
+                            </form>
+                            
+                        </section>
+                    </div>
+                </main>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
