--- a/WebContent/admin/customerService/QnA/detail.html
+++ b/WebContent/admin/customerService/QnA/detail.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../css/reset.css" type="text/css">
     <link rel="stylesheet" href="../../../css/admin/layout.css">
-    <link rel="stylesheet" href="../../../css/admin/notice/detail.css">
+    <link rel="stylesheet" href="../../../css/admin/QnA/detail.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <title>공지사항 자세히보기</title>
+    <title>문의사항 자세히보기</title>
 </head>
 <body>
     <header class="sec_header">
@@ -39,8 +39,8 @@
 	        <aside id="aside" class="aside">
 	            <h1>고객센터</h1>
 	                <ul>
-	                    <li><a href="" class="active">공지사항</a></li>
-	                    <li><a href="">QnA</a></li>
+	                    <li><a href="" >공지사항</a></li>
+	                    <li><a href="" class="active">QnA</a></li>
 	                </ul>
 	        </aside>
 	        <div class="container">
@@ -53,18 +53,18 @@
 	                </ul>
 	            </nav>
 	            <main id="main" class="main">
-	                <h1 class="d-none">공지사항</h1>
+	                <h1 class="d-none">문의사항</h1>
 	                <section class="sub-container">
 	                    <div class="breadcrumb">
 	                        <ul class="breadcrumb-list">
 	                            <li><i class="fas fa-home"></i>HOME ▶ </li>
 	                            <li>고객센터 ▶ </li>
-	                            <li>공지사항 리스트 ▶</li>
-	                            <li>공지사항 디테일</li>
+	                            <li>문의사항 리스트 ▶</li>
+	                            <li>문의사항 디테일</li>
 	                        </ul>
 	                    </div>
 	                    <section class="form-sec">
-	                        <h1>공지사항 디테일</h1>
+	                        <h1>문의사항 디테일</h1>
 	                        <form action="" class="reg-form">
 	                            <table class="table">
 	                                <tr>
