--- a/WebContent/admin/promotion/event/detail.html
+++ b/WebContent/admin/promotion/event/detail.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../css/reset.css">
-    <link rel="stylesheet" href="../../../css/admin/layout.css">
-    <link rel="stylesheet" href="../../../css/admin/promotion/event/detail.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/admin/layout.css">
+    <link rel="stylesheet" href="/css/admin/promotion/event/detail.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <title>이벤트 상세페이ㅈ</title>
+    <title>이벤트 상세페이지</title>
 </head>
 <body>
     <header class="sec-header">
@@ -72,6 +72,10 @@
                                 <img src="../../../images/event/detail6.png" alt=""> -->
                             </div>
                         </section>
+                        <div class="btns-container">
+                            <button class="btn btn-edit" onclick="location.href='edit.jsp'">수정</button>
+                            <input class="btn btn-delete" type="submit" value="삭제" />
+                        </div>
                         <section class="page-list-sec">
                             <div class="page prev-page">
                                 <a href="">
