--- a/WebContent/admin/promotion/event/edit.html
+++ b/WebContent/admin/promotion/event/edit.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../css/reset.css">
-    <link rel="stylesheet" href="../../../css/admin/layout.css">
-    <link rel="stylesheet" href="../../../css/admin/promotion/event/edit.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/admin/layout.css">
+    <link rel="stylesheet" href="/css/admin/promotion/event/edit.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>이벤트 등록</title>
 </head>
@@ -87,8 +87,8 @@
 	                                </tr>
 	                            </table>
 	                            <div>
-	                                <input class="btn-submit" type="submit" value="등록" />
-	                                <button class="btn-cancel" onclick="location.href='list.jsp'">취소</button>
+	                                <input class="btn btn-submit" type="submit" value="등록" />
+	                                <button class="btn btn-cancel" onclick="location.href='list.jsp'">취소</button>
 	                            </div>
 	                        </form>
 	                    </section>
