--- a/WebContent/admin/promotion/event/list.html
+++ b/WebContent/admin/promotion/event/list.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../css/reset.css">
-    <link rel="stylesheet" href="../../../css/admin/layout.css">
-    <link rel="stylesheet" href="../../../css/admin/promotion/event/list.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/admin/layout.css">
+    <link rel="stylesheet" href="/css/admin/promotion/event/list.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="/js/admin/promotion/event/list.js"></script>
     <title>이벤트 리스트</title>
 </head>
 <body>
@@ -39,10 +40,10 @@
         <section class="body">
             <aside id="aside" class="aside">
                 <h1>프로모션 관리</h1>
-                    <ul>
-                        <li><a href="">골든타임 관리</a></li>
-                        <li><a href="" class="active">이벤트 관리</a></li>
-                    </ul>
+                <ul>
+                    <li><a href="">골든타임 관리</a></li>
+                    <li><a href="">이벤트 관리</a></li>
+                </ul>
             </aside>
             <div class="container">
                 <nav id="nav" class="nav">
