--- a/WebContent/admin/promotion/event/detail.html
+++ b/WebContent/admin/promotion/event/detail.html
@@ -72,10 +72,14 @@
                                 <img src="../../../images/event/detail6.png" alt=""> -->
                             </div>
                         </section>
-                        <div class="btns-container">
-                            <button class="btn btn-edit" onclick="location.href='edit.jsp'">수정</button>
-                            <input class="btn btn-delete" type="submit" value="삭제" />
-                        </div>
+                        <form action="edit" method="post">
+                            <div class="btns-container">
+                                <input type="hidden" name="eventNo" value="${currEv.eventNo}">
+                                <button class="btn btn-edit" onclick="location.href='edit.jsp'">수정</button>
+                                <input class="btn btn-delete" type="submit" value="삭제" />
+                            </div>
+                        </form>
+                        
                         <section class="page-list-sec">
                             <div class="page prev-page">
                                 <a href="">
