--- a/WebContent/admin/promotion/event/list.html
+++ b/WebContent/admin/promotion/event/list.html
@@ -75,8 +75,8 @@
                                             <td>제목</td>
                                             <td class="col-m">작성자</td>
                                             <td class="col-m">작성일</td>
-                                            <td class="col-s">공개여부</td>
-                                            <td class="col-s">삭제</td>
+                                            <td class="col-s">공개<input type="checkbox" class="open-chk-all"></td>
+                                            <td class="col-s">삭제<input type="checkbox" class="del-chk-all"></td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -87,8 +87,8 @@
                                             <td class="text-left"><a href="">첫 예약시 모든 숙소 20% 할인쿠폰 증정!</a></td>
                                             <td>관리자</td>
                                             <td>2020-11-01</td>
-                                            <td><input type="checkbox"></td>
-                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox" class="open-chk"></td>
+                                            <td><input type="checkbox" class="del-chk"></td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
@@ -97,8 +97,8 @@
                                             <td class="text-left"><a href="">코로나 극복이벤트! 여행가서 코로나19에 걸려보아요!</a></td>
                                             <td>관리자</td>
                                             <td>2020-11-05</td>
-                                            <td><input type="checkbox"></td>
-                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox" class="open-chk"></td>
+                                            <td><input type="checkbox" class="del-chk"></td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
@@ -107,8 +107,8 @@
                                             <td class="text-left"><a href="">강남 전지역 숙박업소 30% 할인쿠폰 증정!</a></td>
                                             <td>관리자</td>
                                             <td>2020-11-14</td>
-                                            <td><input type="checkbox"></td>
-                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox" class="open-chk"></td>
+                                            <td><input type="checkbox" class="del-chk"></td>
                                         </tr>
                                         <tr>
                                             <td>4</td>
@@ -117,8 +117,8 @@
                                             <td class="text-left"><a href="">하ㅏㅏㅏㅏㅏㅏㅏㅏ 제목 뭐로하지???ㄹㅇㅇㅇㅇㅇ</a></td>
                                             <td>관리자</td>
                                             <td>2020-11-23</td>
-                                            <td><input type="checkbox"></td>
-                                            <td><input type="checkbox"></td>
+                                            <td><input type="checkbox" class="open-chk"></td>
+                                            <td><input type="checkbox" class="del-chk"></td>
                                         </tr>
                                         <tr>
                                             <td colspan="8" class="no-border btn-row">
