폴더명 정리

--- a/WebContent/user/offer/edit.html
+++ b/WebContent/user/offer/edit.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/reset.css" type="text/css">
-    <link rel="stylesheet" href="../../css/user/counterProposal/edit.css"  type="text/css">
+    <link rel="stylesheet" href="/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/css/user/offer/edit.css"  type="text/css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <title>(개인)역제안 수정 페이지</title>
+    <title>(개인)제안 수정 페이지</title>
 </head>
 <body>
     <header id="header" class="header">
