--- a/WebContent/user/offer/detail.html
+++ b/WebContent/user/offer/detail.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/reset.css" type="text/css">
-    <link rel="stylesheet" href="../../css/user/counterProposal/offercheck.css" type="text/css">
+    <link rel="stylesheet" href="/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/css/user/offer/detail.css" type="text/css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>(개인)오퍼 내용 상세조회 페이지</title>
 </head>
