--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/jun.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="sec_header_index">
@@ -47,17 +48,19 @@
         </div>
     </header> -->
 
-    <section class="sec_main_page">
+    <section class="sec-promotion-page">
         <section class="promotion">
             <div class="promotion_bar">
                 <div>
-                    <h1 style="font-size: 30px;"><i class="fas fa-bell"></i>  골든타임</h1>
+                    <h1 style="font-size: 30px; color: #fc0453;"><i class="fas fa-bell"></i>  <span style="color: #fc0453;">골든타임</span></h1>
                 </div>
                 <div>
-                    <div><a href=""><i style="font-size: 40px; color: rgb(196, 188, 188);" class="fas fa-arrow-circle-left"></i></a></div>
+                    <div><a href=""><i style="font-size: 40px; color: #5f0081;" class="fas fa-arrow-circle-left"></i></a></div>
                     <div class="promotion-item" style="flex-direction: column;">
-                        <div>
+                        <div class="parent">
                             <img src="images/company/호텔/리스트/신라스테이_삼성_메인.jpg" alt="">
+
+                            <div class="child"><span>00:00:00</span></div>
                         </div>
                         <div class="promotion-item-detail">
                             <h2>강남 파르페 호텔</h2>
@@ -97,7 +100,7 @@
                             <h2>추천상품</h2>
                         </div>
                     </div>
-                    <div><a href=""><i style="font-size: 40px; color: rgb(196, 188, 188);" class="fas fa-arrow-circle-right"></i></a></div>
+                    <div><a href=""><i style="font-size: 40px; color: #5f0081;" class="fas fa-arrow-circle-right"></i></a></div>
                 </div>
             </div>
         </section>
@@ -138,6 +141,12 @@
                     </ul>
                 </div>
         </section>
+    </section>
+
+    <section class="sec-event-page">
+        <div class="event-sec">
+
+        </div>
     </section>
 
     <section class="sec_footer">
