main page css mod

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,29 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="sec_header_index">
-        <div class="header_index pcHeader">
-            <div class="header_h1">
-                <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
             </div>
             <div>
-                <ul class="main_menu">
+                <ul class="main-menu">
                     <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">공지사항</a></li>
                     <li><a href="">이벤트</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega_menu">
+                        <!-- <div class="mega_menu">
                             <ul>
                                 <li><a href="">submenu</a></li>
                                 <li><a href="">submenu</a></li>
                                 <li><a href="">submenu</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
     </header>
 
     <!-- <header class="header mobileHeader">
@@ -49,13 +49,13 @@
     </header> -->
 
     <section class="sec-promotion-page">
-        <section class="promotion">
-            <div class="promotion_bar">
+        <section class="promotion-sec">
+            <div class="promotion-bar">
                 <div>
                     <h1 style="font-size: 30px; color: #fc0453;"><i class="fas fa-bell"></i>  <span style="color: #fc0453;">골든타임</span></h1>
                 </div>
                 <div>
-                    <div><a href=""><i style="font-size: 40px; color: #5f0081;" class="fas fa-arrow-circle-left"></i></a></div>
+                    <div class="btn-left"><a href=""><i style="font-size: 40px; color: #5f0081;" class="fas fa-arrow-circle-left"></i></a></div>
                     <div class="promotion-item" style="flex-direction: column;">
                         <div class="parent">
                             <img src="images/company/호텔/리스트/신라스테이_삼성_메인.jpg" alt="">
@@ -100,40 +100,40 @@
                             <h2>추천상품</h2>
                         </div>
                     </div>
-                    <div><a href=""><i style="font-size: 40px; color: #5f0081;" class="fas fa-arrow-circle-right"></i></a></div>
+                    <div class="btn-right"><a href=""><i style="font-size: 40px; color: #5f0081;" class="fas fa-arrow-circle-right"></i></a></div>
                 </div>
             </div>
         </section>
 
-        <section class="category">
-                <div class="category_bar">
+        <section class="category-sec">
+                <div class="category-bar">
                     <ul>
                         <li>
-                            <a class="category_img" href="">
+                            <a class="category-img" href="">
                                 <img src="images/main/hotel-icon.png" alt="">
                                 <span>호텔</span>
                             </a>
                         </li>
                         <li>
-                            <a class="category_img" href="">
+                            <a class="category-img" href="">
                                 <img src="images/main/motel-icon.png" alt="">
                                 <span>모텔</span>
                             </a>
                         </li>
                         <li>
-                            <a class="category_img" href="">
+                            <a class="category-img" href="">
                                 <img src="images/main/guesthouse-icon.png" alt="">
                                 <span>게스트하우스</span>
                             </a>
                         </li>
                         <li>
-                            <a class="category_img" href="">
+                            <a class="category-img" href="">
                                 <img src="images/main/resort-icon.png" alt="">
                                 <span>리조트</span>
                             </a>
                         </li>
                         <li>
-                            <a class="category_img" href="">
+                            <a class="category-img" href="">
                                 <img src="images/main/pension-icon.png" alt="">
                                 <span>펜션</span>
                             </a>
