메인페이지 - 이벤트 작업

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </head>
 <body>
     <header class="sec_header_index">
@@ -144,9 +144,32 @@
     </section>
 
     <section class="sec-event-page">
-        <div class="event-sec">
-
-        </div>
+        <section class="event-sec">
+            <div class="event-container">
+                <h1>진행중인 이벤트</h1>
+                <div class="event-list-container">
+                    <ul class="event-list">
+                        <li><a href=""><img src="/images/event/event1.png" alt=""></a></li>
+                        <!-- <li><a href=""><img src="/images/event/event2.png" alt=""></a></li>
+                        <li><a href=""><img src="/images/event/event3.png" alt=""></a></li> -->
+                    </ul>
+                </div>
+                <div class="etc-container">
+                    <div class="etc-img-container">
+                        <a href=""><img src="/images/event/etc1.jpg" alt=""></a>
+                    </div>
+                    <div class="etc-img-container">
+                        <a href=""><img src="/images/event/etc2.jpg" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <div class="weather-container">
+                <h1>날씨</h1>
+                <div class="weather-list-container">
+                    <img src="/images/event/weather.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </section>
 
     <section class="sec_footer">
