--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -143,6 +143,18 @@
         </section>
     </section>
 
+    <section class ="sec-offer-page">
+        <div class="offer-kaTalk">
+            <img src="/images/main/kaTalk.jpg">
+        </div>
+        <div class="offer-text">
+
+        </div>
+        <div class="offer-button">
+
+        </div>
+    </section>
+    
     <section class="sec-event-page">
         <div class="event-sec">
 
