이벤트 캐러셀 구현

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -145,7 +145,7 @@
 
     <section class ="sec-offer-page">
         <div class="offer-kaTalk">
-            <img src="/images/main/kaTalk.jpg">
+            <!-- <img src="/images/main/kaTalk.jpg"> -->
         </div>
         <div class="offer-text">
 
@@ -159,11 +159,18 @@
         <section class="event-sec">
             <div class="event-container">
                 <h1>진행중인 이벤트</h1>
+                <div class="cliper-btn prev-btn">
+                    <i class="fas fa-angle-left"></i>
+                </div>
+                <div class="cliper-btn next-btn">
+                    <i class="fas fa-angle-right"></i>
+                </div>
                 <div class="event-list-container">
                     <ul class="event-list">
                         <li><a href=""><img src="/images/event/event1.png" alt=""></a></li>
-                        <!-- <li><a href=""><img src="/images/event/event2.png" alt=""></a></li>
-                        <li><a href=""><img src="/images/event/event3.png" alt=""></a></li> -->
+                        <li><a href=""><img src="/images/event/event2.png" alt=""></a></li>
+                        <li><a href=""><img src="/images/event/event3.png" alt=""></a></li>
+                        <li><a href=""><img src="/images/event/event4.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="etc-container">
