--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -48,7 +48,7 @@
         </div>
     </header> -->
 
-    <section class="sec-promotion-page">
+    <section id="sec-promotion-page" class="sec-promotion-page scrolling">
         <section class="promotion-sec">
             <div class="promotion-bar">
                 <div>
@@ -180,7 +180,7 @@
         </section>
     </section>
 
-    <section class ="sec-offer-page">
+    <section id="sec-offer-page" class ="sec-offer-page scrolling">
         <div class="offer-katalk">
             <img src="/images/main/kaTalk.jpg">
         </div>
@@ -195,7 +195,7 @@
         </div>
     </section>
     
-    <section class="sec-event-page">
+    <section id="sec-event-page" class="sec-event-page scrolling">
         <section class="event-sec">
             <div class="event-container">
                 <h1>진행중인 이벤트</h1>
